# BiasAnalyzerCore

./: .coveragerc  .gitignore  LICENSE  README.md  config_duckdb.yaml  pyproject.toml
.github/workflows/: test.yml
biasanalyzer/: api.py  cohort.py  cohort_query_builder.py  concept.py  config.py  database.py  models.py  module_test.py  sql.py  utils.py
biasanalyzer/background/: threading_utils.py
biasanalyzer/sql_templates/: base.sql.j2  cohort_concept_prevalence_query.sql.j2  cohort_creation_condition_occurrence_query.sql.j2  cohort_creation_query.sql.j2  macros.sql.j2
healthdatabias/: api.py  cohort.py  config.py  database.py  models.py  module_test.py  sql.py  utils.py
notebooks/: BiasAnalyzerAsyncCohortsTutorial.ipynb  BiasAnalyzerCohortConceptTutorial.ipynb  BiasAnalyzerCohortsTutorial.ipynb  BiasAnalyzerConceptBrowsingTutorial.ipynb  BiasAnalyzerMultipleCohortConceptUnionTutorial.ipynb  BiasAnalyzerTestingAsyncCohortCreation.ipynb  BiasAnalyzerTestingCohortConceptStats.ipynb  BiasAnalyzerTestingCohorts.ipynb  BiasAnalyzerTestingConceptBrowsing.ipynb  BiasModuleTestingCohortConceptStats.ipynb
scripts/: ingest_csvs_to_omop_duckdb.py
sql_templates/: base.sql.j2  cohort_creation_condition_occurrence_query.sql  cohort_creation_query.sql  macros.sql.j2
tests/: conftest.py  test_biasanalyzer.py  test_biasanalyzer_api.py  test_config.py  test_database.py  test_healthdatabias.py  test_hierarchical_prevalence.py
tests/assets/: test_cohort_creation_condition_occurrence_config.yaml  test_cohort_creation_config.yaml  test_config.yaml
tests/assets/cohort_creation/: test_cohort_creation_condition_occurrence_config.yaml  test_cohort_creation_condition_occurrence_config_baseline.yaml  test_cohort_creation_condition_occurrence_config_study.yaml  test_cohort_creation_condition_occurrence_config_study2.yaml  test_cohort_creation_config.yaml  test_cohort_creation_multiple_temporal_groups_without_operator.yaml  test_cohort_creation_negative_instance.yaml  test_cohort_creation_negative_instance_offset.yaml  test_cohort_creation_offset.yaml
tests/assets/cohort_creation/extras/: cohort_creation_config_study1_example2.yaml  cohort_creation_config_study2_example2.yaml
tests/assets/cohort_creation/extras/covid_example3/: cohort_creation_config_baseline_example3.yaml  cohort_creation_config_study1_example3.yaml  cohort_creation_config_study2_example3.yaml  cohort_creation_config_study3_example3.yaml  cohort_creation_config_study4_example3.yaml
tests/assets/cohort_creation/extras/diabetes_example2/: cohort_creation_config_baseline_example2.yaml  cohort_creation_config_study1_example2.yaml  cohort_creation_config_study2_example2.yaml
tests/assets/cohort_creation/extras/heart_failure_example1/: cohort_creation_config_baseline_example1.yaml  cohort_creation_config_study1_example1.yaml  cohort_creation_config_study2_example1.yaml
tests/assets/config/: .test_config_postgresql.yaml.swp  test_config_postgresql.yaml  test_config_unsupported_db_type.yaml  test_invalid_config.yaml
tests/query_based/: conftest.py  test_cohort_creation.py  test_hierarchical_prevalence.py
